--- a/package.json
+++ b/package.json
@@ -9,14 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "@firebase/app": "^0.10.6",
+    "@firebase/storage": "^0.12.6",
+    "@prisma/adapter-pg": "^5.16.1",
+    "@prisma/client": "^5.16.1",
+    "antd": "^5.18.3",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "cookies-next": "^4.2.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "firebase": "^10.12.3",
+    "jsonwebtoken": "^9.0.2",
+    "next": "14.2.4",
+    "pg": "^8.12.0",
+    "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
