--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
