--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-multi-carousel": "^2.8.5",
+    "react-quilljs": "^2.0.3",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
