--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@firebase/storage": "^0.12.6",
     "@prisma/adapter-pg": "^5.16.1",
     "@prisma/client": "^5.16.1",
+    "@tanstack/react-query": "^5.51.11",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -30,7 +31,8 @@
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-quilljs": "^2.0.3",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "eslint": "^8",
