--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@prisma/adapter-pg": "^5.16.1",
     "@prisma/client": "^5.16.1",
     "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-store": "^0.5.5",
+    "@tanstack/store": "^0.5.5",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
