--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.19.2",
     "firebase": "^10.12.3",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "next": "14.2.4",
     "pg": "^8.12.0",
     "prisma": "^5.16.1",
