--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,6 @@
         "dest": "/$1"
       }
     ],
-    "buildCommand": "npm install && npm run build && npx prisma generate && npx prisma migrate dev"
+    "buildCommand": "npm install && npm run build && npx prisma generate && npx prisma migrate deploy"
   }
   
