--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
+    "react-paginate": "^8.2.0",
     "react-quilljs": "^2.0.3",
     "react-responsive-carousel": "^3.2.23",
     "slugify": "^1.6.6"
@@ -42,7 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "prisma": "^5.16.1"
+    "prisma": "^5.16.1",
+    "tailwindcss": "^3.4.1"
   }
 }
