--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "14.2.4",
+    "nuka-carousel": "^8.1.1",
     "pg": "^8.12.0",
     "prisma": "^5.16.1",
     "react": "^18",
@@ -37,6 +38,7 @@
     "react-paginate": "^8.2.0",
     "react-quilljs": "^2.0.3",
     "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
