--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg": "^8.12.0",
     "prisma": "^5.16.1",
     "react": "^18",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
