--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-quilljs": "^2.0.3",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
+    "react-tabs": "^6.0.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
