--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npx prisma generate && npx prisma migrate deploy"
+    "lint": "next lint"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
@@ -41,7 +40,9 @@
     "react-quilljs": "^2.0.3",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
+    "react-social-login-buttons": "^4.1.0",
     "react-tabs": "^6.0.2",
+    "reactjs-social-login": "^2.6.3",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
