--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-store": "^0.5.5",
     "@tanstack/store": "^0.5.5",
     "antd": "^5.18.3",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookies-next": "^4.2.1",
